# To_Do_App

./: CMakeLists.txt  DialogWindow.cpp  DialogWindow.h  DialogWindow.ui  FileController.cpp  FileController.h  InputDialogWindow.cpp  ListItem.cpp  ListItem.h  MainWindow.cpp  MainWindow.h  Notes.txt  README.md  TaskList.cpp  TaskList.h  main.cpp
AddUpdateWindow/: DialogWindow.cpp  DialogWindow.h
ApplicationWindow/: ListItem.h  TaskList.cpp  TaskList.h
DatabaseHandlerFiles/: DatabaseHandler.cpp  DatabaseHandler.h  DatabaseItem.cpp  DatabaseItem.h
FileControl/: FileController.cpp  FileController.h
WindowDialog/: DialogWindow.cpp  DialogWindow.h
WindowMain/: ListItem.h  MainWindow.cpp  MainWindow.h  TaskList.cpp  TaskList.h  TaskList.ui
dialogWindow/: InputDialogWindow.h  InputDialogWindow.ui
fileControl/: FileController.h
mainWindowItems/: MainWindow.h
